Fixed overflow on responsive to correctly render herb upon resize

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -462,3 +462,8 @@ aside {
 .breadcrumb .active {
   color: $grayDark;
 }
+
+//* Tab *//
+.tab-content {
+  overflow: visible;
+}
